fixed overflow issues

--- a/src/styles/blocks/technology.scss
+++ b/src/styles/blocks/technology.scss
@@ -4,6 +4,8 @@
 
   padding: 90px $paddingX 0;
 
+  overflow: hidden;
+
   @include tablet {
     padding: 130px $paddingXTablet 0;
   }
